# systemc-blocks

./: README.md
src/: CMakeLists.txt  hello.cpp
src/sharpener/: main.cpp  png_reader.cpp  png_reader.h  png_reader_if.h  sharpener.cpp  sharpener.h  sink.cpp  sink.h  source.cpp  source.h  test_sharpener.cpp
src/stack/: consumer.h  producer.h  stack.h  stack_if.h  test_stack.cpp
src/xor/: mon.h  nand.h  stim.h  test_xor.cpp  xor.h
